storage and redis session added

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,12 @@
   "dependencies": {
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
+    "@aws-sdk/client-s3": "^3.490.0",
+    "@aws-sdk/s3-request-presigner": "^3.490.0",
     "cors": "^2.8.5",
     "qrcode": "^1.5.3",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "redis": "^4.6.12"
   }
 }
