--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "qrcode": "^1.5.3",
     "dotenv": "^16.3.1",
-    "redis": "^4.6.12"
+    "redis": "^4.6.12",
+    "compression": "^1.7.4",
+    "helmet": "^7.1.0"
   }
 }
